# XSpeech

./: LICENSE  README.md  setup.cfg
.github/workflows/: lint.yaml  test_package.yaml
tests/models/: test_conv_tasnet.py  test_film.py  test_filterbank.py  test_tdcn.py
tests/modules/: test_norm.py
xspeech/models/: conv_tasnet.py  film.py  filterbank.py  tdcn.py
xspeech/models/utils/: filterbank.py
xspeech/modules/: norm.py
xspeech/modules/utils/: tasnet.py
xspeech/utils/: __init__.py
