[metadata]
name = xspeech
version = attr: xspeech.__init__.__version__
description = "A Pytorch implementation of target speaker extraction."
long_description = file: README.md
license = "MIT License"
url = "https://github.com/tky823/XSpeech"
python_requires = ">=3.7, <4"

[options]
packages = find:
install_requires =
    torch
    torchaudio

[options.extras_require]
dev =
    flake8
    black
docs =
    furo